Create form page

--- a/src/app/pages/dashboard/main-header/main-header.component.scss
+++ b/src/app/pages/dashboard/main-header/main-header.component.scss
@@ -9,13 +9,19 @@
 
 ion-header {
   width: auto !important;
-  margin: var(--ion-margin, 16px);
+  padding: var(--ion-margin, 16px);
+  box-shadow: none;
+  background: #fff;
+}
+ion-toolbar {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
   border-radius: 15px;
-
-  ion-toolbar {
-    border-radius: 15px;
-    height: 65px;
-    --padding-start: var(--ion-padding, 16px);
-    --padding-end: var(--ion-padding, 16px);
-  }
+  height: 65px;
+  --padding-start: var(--ion-padding, 16px);
+  --padding-end: var(--ion-padding, 16px);
+}
+ion-searchbar {
+  --background: var(--ion-color-light);
+  --border-radius: 8px;
+  padding: 0;
 }
