--- a/src/app/pages/dashboard/main-header/main-header.component.html
+++ b/src/app/pages/dashboard/main-header/main-header.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ion-display-flex">
+  <ion-toolbar class="ion-display-flex ion-margin-bottom">
     <ion-menu-button size="large" [slot]="'start'"></ion-menu-button>
     <div class="header-title ion-align-items-center ion-display-flex">
       <ion-img class="me-2" src="/assets/icon/logo1.png"></ion-img>
@@ -10,4 +10,12 @@
       <ion-badge color="danger"></ion-badge>
     </ion-button>
   </ion-toolbar>
+  @if(isSearch()) {
+  <div class="ion-display-flex">
+    <ion-searchbar placeholder="Search projects"></ion-searchbar>
+    <ion-button (click)="onSearch()" fill="clear" shape="round">
+      <ion-icon name="funnel-outline" color="medium"></ion-icon>
+    </ion-button>
+  </div>
+  }
 </ion-header>
