--- a/src/app/components/widgets/input/input-checkbox/input-checkbox.component.html
+++ b/src/app/components/widgets/input/input-checkbox/input-checkbox.component.html
@@ -1,3 +1,6 @@
-<p>
-  input-checkbox works!
-</p>
+<ion-checkbox
+  [formControl]="control()"
+  [class]="class()"
+  labelPlacement="end"
+  >{{ label() | translate }}</ion-checkbox
+>
