--- a/src/assets/theme/global.scss
+++ b/src/assets/theme/global.scss
@@ -75,7 +75,11 @@ html:lang(fa) {
     transform: rotate(15deg);
     border-radius: 10px 10px 50px 10px;
     margin-right: -28px;
-    background: linear-gradient(90deg, var(--ion-color-primary-shade) 0%, var(--ion-color-primary) 100%);
+    background: linear-gradient(
+      90deg,
+      var(--ion-color-primary-shade) 0%,
+      var(--ion-color-primary) 100%
+    );
   }
 }
 
@@ -84,13 +88,19 @@ html:lang(en) {
     transform: rotate(-15deg);
     border-radius: 10px 10px 10px 50px;
     margin-left: -18px;
-    background: linear-gradient(90deg, var(--ion-color-primary) 0%, var(--ion-color-primary-shade) 100%);
+    background: linear-gradient(
+      90deg,
+      var(--ion-color-primary) 0%,
+      var(--ion-color-primary-shade) 100%
+    );
   }
 }
 
-ion-input {
+ion-input,
+ion-select,
+ion-textarea {
   // height: 65px;
-  --background: #F1F4FF !important;
+  --background: #f1f4ff !important;
   --border-color: #e9e9e9 !important;
   --color: #626262 !important;
 }
@@ -101,7 +111,7 @@ ion-input {
 }
 
 ion-button {
-  filter: drop-shadow(0px 10px 20px #CBD6FF);
+  // filter: drop-shadow(0px 10px 20px #CBD6FF);
 }
 
 .input-fill-outline.has-focus.sc-ion-input-md-h {
@@ -112,6 +122,7 @@ ion-content {
   --padding-start: var(--ion-padding, 16px);
   --padding-end: var(--ion-padding, 16px);
 }
+
 .label-text {
   // border-inline-end: 1px solid #b3b3b3;
   // padding-inline-end: 5px;
