--- a/src/app/components/widgets/input/input-select/input-select.component.html
+++ b/src/app/components/widgets/input/input-select/input-select.component.html
@@ -8,6 +8,8 @@
   [fill]="fill()"
   [multiple]="multiple()"
   [interface]="interface()"
+  [cancelText]="'Cancel' | translate"
+  [color]="'danger'"
 >
   <ion-select-option *ngFor="let option of options()" [value]="option.value">
     {{ option.label | translate }}
