Change form builder component

--- a/src/app/components/widgets/form-builder/form-builder-creation/form-builder-creation.component.html
+++ b/src/app/components/widgets/form-builder/form-builder-creation/form-builder-creation.component.html
@@ -1,3 +1,19 @@
-<p>
-  form-builder-creation works!
-</p>
+<!-- <input-autocomplete
+    [control]="getControl('title')"
+    [placeholder]="'Please input'"
+    [options]="options"
+    [size]="'medium'"
+    [backfill]="true"
+  >
+  </input-autocomplete>
+
+  <input-upload-file
+    [accept]="'image/*,video/*,.pdf'"
+    [multiple]="true"
+    [maxCount]="5"
+    [maxSize]="5 * 1024 * 1024"
+    [buttonText]="'آپلود فایل'"
+    [listType]="'picture'"
+    [capture]="'both'"
+  >
+  </input-upload-file> -->
