--- a/src/app/components/widgets/form-builder/form-builder-config/form-builder-config.component.html
+++ b/src/app/components/widgets/form-builder/form-builder-config/form-builder-config.component.html
@@ -1,42 +1,70 @@
-<form class="dialog" [formGroup]="form">
-  <input-text [control]="getControl('name')" [label]="'Name'"> </input-text>
-  <input-text [control]="getControl('title')" [label]="'Title'"> </input-text>
-  <!-- Input Textarea -->
-  <input-textarea
+<form [formGroup]="form">
+  <input-text
     [control]="getControl('title')"
-    [label]="'description'"
-    [placeholder]="'enter_description'"
-    [rows]="5"
-  >
-  </input-textarea>
-
-  <!-- Input Select -->
+    label="Title"
+    class="ion-margin-bottom"
+  ></input-text>
+  <input-text
+    [control]="getControl('name')"
+    label="Name"
+    class="ion-margin-bottom"
+  ></input-text>
   <input-select
-    [control]="getControl('title')"
-    [label]="'category'"
-    [options]="categories"
-    [placeholder]="'select_category'"
-  >
-  </input-select>
-
-  <!-- Input Autocomplete -->
-  <input-autocomplete
-    [control]="getControl('title')"
-    [placeholder]="'Please input'"
-    [options]="options"
-    [size]="'medium'"
-    [backfill]="true"
-  >
-  </input-autocomplete>
-
-  <input-upload-file
-    [accept]="'image/*,video/*,.pdf'"
-    [multiple]="true"
-    [maxCount]="5"
-    [maxSize]="5 * 1024 * 1024"
-    [buttonText]="'آپلود فایل'"
-    [listType]="'picture'"
-    [capture]="'both'"
-  >
-  </input-upload-file>
+    label="Type"
+    [control]="getControl('type')"
+    [options]="types"
+    class="ion-margin-bottom"
+  ></input-select>
+  <input-select
+    label="Widget"
+    [control]="getControl('widget')"
+    [options]="widgets"
+    class="ion-margin-bottom"
+  ></input-select>
+  <input-checkbox
+    [control]="getControl('required')"
+    label="Required"
+    class="ion-margin-bottom me-5"
+  ></input-checkbox>
+  <input-checkbox
+    [control]="getControl('readonly')"
+    label="Readonly"
+    class="ion-margin-bottom"
+  ></input-checkbox>
+  <input-text
+    [control]="getControl('placeHolder')"
+    label="PlaceHolder"
+    class="ion-margin-bottom"
+  ></input-text>
+  <input-text
+    [control]="getControl('default')"
+    label="Default"
+    class="ion-margin-bottom"
+  ></input-text>
+  <input-textarea
+    [control]="getControl('description')"
+    label="Description"
+  ></input-textarea>
+  <div formGroupName="visible">
+    <nz-divider [nzText]="'DisplayConditionBasedOn' | translate"></nz-divider>
+    <input-select
+      label="Field"
+      [control]="getVisibleControl('field')"
+      [options]="fields()"
+      class="ion-margin-bottom"
+    ></input-select>
+    @if (getVisibleControl('field').value) {
+    <input-select
+      label="Condition"
+      [control]="getVisibleControl('condition')"
+      [options]="conditions"
+      class="ion-margin-bottom"
+    ></input-select>
+    <input-text
+      [control]="getVisibleControl('value')"
+      label="Value"
+      class="ion-margin-bottom"
+    ></input-text>
+    }
+  </div>
 </form>
