--- a/src/app/pages/dashboard/main-tabs/main-tabs.component.html
+++ b/src/app/pages/dashboard/main-tabs/main-tabs.component.html
@@ -4,7 +4,7 @@
   </ion-fab> -->
 
   <ion-tab-bar slot="bottom" class="ion-no-border">
-    <ion-tab-button tab="/">
+    <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
       خانه
     </ion-tab-button>
