--- a/src/app/pages/request-type/request-type.page.html
+++ b/src/app/pages/request-type/request-type.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>request-types</ion-title>
+    <ion-title>request-type</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">request-types</ion-title>
+      <ion-title size="large">request-type</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
