--- a/src/assets/theme/global.scss
+++ b/src/assets/theme/global.scss
@@ -72,15 +72,11 @@ body {
 
 html:lang(fa) {
   .menu-header-bg {
-    transform: rotate(15deg);
+   transform: rotate(16deg);
     border-radius: 10px 10px 50px 10px;
-    margin-right: -28px;
-    background: linear-gradient(
-      90deg,
-      var(--ion-color-primary-shade) 0%,
-      var(--ion-color-primary) 100%
-    );
-  }
+    margin-right: -9px;
+    background: linear-gradient(90deg, var(--ion-color-primary-shade) 0%, var(--ion-color-primary) 100%);
+}
 }
 
 html:lang(en) {
