--- a/src/app/pages/dashboard/main-menu/main-menu.component.scss
+++ b/src/app/pages/dashboard/main-menu/main-menu.component.scss
@@ -1,10 +1,12 @@
+ion-header{
+  box-shadow: none;
+}
 .menu-header-bg {
-  height: 180px;
-  width: 350px;
-  background: var(--ion-color-primary);
-  margin-top: -65px;
-  margin-bottom: 60px;
-  box-shadow: 0px 1px 10px var(--ion-color-primary);
+     height: 180px;
+    width: 350px;
+    margin-top: -50px;
+    margin-bottom: 50px;
+    box-shadow: 0px 1px 10px var(--ion-color-primary);
 }
 
 ion-button {
@@ -24,7 +26,7 @@ ion-button {
 .header-content {
   position: absolute;
   top: 30px;
-  margin-inline-start: 15px;
+    margin-inline-start: 40px;
 
   img {
     width: 80px;
@@ -104,7 +106,7 @@ ion-button {
   background: transparent;
 }
 
-.menu-item {
+.menu-item,.submenu-item {
   --background: transparent;
   --padding-start: 20px;
   --padding-end: 20px;
@@ -184,7 +186,7 @@ ion-button {
   }
 }
 
-.menu-item {
+.menu-item,.submenu-item {
   animation: slideIn 0.3s ease forwards;
 
   @for $i from 1 through 10 {
