Set request  states

--- a/src/app/pages/request/request-state/request-state-dialog/request-state-dialog.page.html
+++ b/src/app/pages/request/request-state/request-state-dialog/request-state-dialog.page.html
@@ -16,9 +16,10 @@
   </ion-header>
   <ion-content>
     <div class="ion-margin-vertical">
-      <!-- <form [formGroup]="form">
+      <form [formGroup]="form">
         <input-text [control]="getControl('title')" label="Title"></input-text>
-      </form> -->
+        <app-autocomplete></app-autocomplete>
+      </form>
     </div>
   </ion-content>
 </div>
