Change request icons

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,10 +8,10 @@
   <div class="ion-margin-vertical">
     <div class="ion-margin-vertical ion-display-flex ion-align-items-center">
       <ion-text class="me-auto" color="dark">
-        <h3 class="m-0">آخرین درخواست‌ها</h3>
+        <h5 class="m-0">آخرین درخواست‌ها</h5>
       </ion-text>
       <ion-text color="medium">
-        <h6 class="m-0">مشاهده همه</h6>
+        <span class="m-0">مشاهده همه</span>
       </ion-text>
     </div>
     <div id="latest-requests">
