--- a/src/app/pages/request/request-list/request-list.page.html
+++ b/src/app/pages/request/request-list/request-list.page.html
@@ -20,7 +20,7 @@
           <ion-card-content>
             <div class="ion-display-flex ion-margin-bottom">
               <ion-avatar slot="start" class="me-1">
-                <img [src]="'assets/icon/success.svg'" alt="request" />
+                <img [src]="'assets/icon/'+ item.status +'.svg'" alt="request" />
               </ion-avatar>
               <ion-text
                 class="ion-display-flex ion-flex-column ion-justify-content-center"
@@ -41,8 +41,8 @@
             </div>
             <div class="ion-display-flex">
               <ion-text>{{"وضعیت"}}</ion-text>
-              <ion-text class="mx-3" color="success">
-                {{ 'تایید شده' }}
+              <ion-text class="mx-3" [color]="item.status == 'success' ? 'success' : item.status == 'reject' ? 'danger' : 'secondary'">
+                {{ item.status == 'success' ? 'تایید شده' : item.status == 'reject' ? 'رد شده' : 'در حال بررسی' }}
               </ion-text>
               <ion-text class="ms-auto">{{ '1404/08/01' }}</ion-text>
             </div>
@@ -81,68 +81,6 @@
         </div>
       </div>
       }
-      <!-- <ion-card class="ion-margin-bottom">
-        <ion-card-content>
-          <div class="ion-display-flex ion-margin-bottom">
-            <ion-avatar slot="start" class="me-1">
-              <img [src]="'assets/icon/reject.svg'" alt="request" />
-            </ion-avatar>
-            <div
-              class="ion-display-flex ion-flex-column ion-justify-content-center"
-            >
-              <ion-text class="request-title" color="dark"
-                >{{ 'درخواست 1' }}</ion-text
-              >
-              <ion-text class="request-sub">{{ 'مجتبی سجادفر' }}</ion-text>
-            </div>
-
-            <ion-icon
-              class="ms-auto mt-1"
-              color="dark"
-              slot="icon-only"
-              name="ellipsis-vertical"
-              size="small"
-            ></ion-icon>
-          </div>
-          <div class="ion-display-flex">
-            <ion-text>{{"وضعیت"}}</ion-text>
-            <ion-text class="mx-3" color="danger"> {{ 'رد شده' }} </ion-text>
-            <ion-text class="ms-auto">{{ '1404/08/01' }}</ion-text>
-          </div>
-        </ion-card-content>
-      </ion-card>
-      <ion-card class="ion-margin-bottom">
-        <ion-card-content>
-          <div class="ion-display-flex ion-margin-bottom">
-            <ion-avatar slot="start" class="me-1">
-              <img [src]="'assets/icon/in_progress.png'" alt="request" />
-            </ion-avatar>
-            <div
-              class="ion-display-flex ion-flex-column ion-justify-content-center"
-            >
-              <ion-text class="request-title" color="dark"
-                >{{ 'درخواست 1' }}</ion-text
-              >
-              <ion-text class="request-sub">{{ 'مجتبی سجادفر' }}</ion-text>
-            </div>
-
-            <ion-icon
-              class="ms-auto mt-1"
-              color="dark"
-              slot="icon-only"
-              name="ellipsis-vertical"
-              size="small"
-            ></ion-icon>
-          </div>
-          <div class="ion-display-flex">
-            <ion-text>{{"وضعیت"}}</ion-text>
-            <ion-text class="mx-3" color="secondary">
-              {{ 'درحال بررسی' }}
-            </ion-text>
-            <ion-text class="ms-auto">{{ '1404/08/01' }}</ion-text>
-          </div>
-        </ion-card-content>
-      </ion-card> -->
     </ion-list>
   </ion-grid>
 </ion-content>
